# VULCAN

./: .gitignore  CHO_network.txt  README.md  agni.py  build_atm.py  chem_funs.py  compose.py  config.py  diagnose.py  fc_dynamical_Dijkstra.py  gCMCRT.py  make_chem_funs.py  mie.py  nohup.out  op.py  paths.py  phy_const.py  plot_vulcan.py  prepipe.py  pyproject.toml  store.py  vulcan.py  vulcan_cfg.py  vulcan_cfg_Earth.py  vulcan_cfg_README.txt  vulcan_cfg_readme.txt
__pycache__/: gCMCRT.gCMCRT_main-272.py310.1.nbc  gCMCRT.gCMCRT_main-272.py310.nbi  gCMCRT.inc_stellar-120.py310.1.nbc  gCMCRT.inc_stellar-120.py310.2.nbc  gCMCRT.inc_stellar-120.py310.nbi  gCMCRT.scatter-131.py310.1.nbc  gCMCRT.scatter-131.py310.2.nbc  gCMCRT.scatter-131.py310.nbi  gCMCRT.scatter_surf-261.py310.1.nbc  gCMCRT.scatter_surf-261.py310.2.nbc  gCMCRT.scatter_surf-261.py310.nbi  gCMCRT.tauint_1D_pp-54.py310.1.nbc  gCMCRT.tauint_1D_pp-54.py310.2.nbc  gCMCRT.tauint_1D_pp-54.py310.3.nbc  gCMCRT.tauint_1D_pp-54.py310.nbi
atm/: BC_bot.txt  BC_bot_Earth.txt  BC_bot_mars.txt  BC_top.txt  BC_top_Jupiter.txt  BC_top_mars.txt  README.txt  Venus_wiki.txt  atm_GJ1214b_Kzz.txt  atm_GJ1214b_Kzz_aer.txt  atm_HD189.txt  atm_HD189_Kzz.txt  atm_HD189_Kzz_ter.txt  atm_HD209.txt  atm_HD209_Kzz.txt  convert_vpl_spectra_in_nm.py  make_atm_Kzz_cld.py  make_spectra_in_nm.py  venus.txt  wasp63b_TP.txt
cfg_examples/: README.txt  cfg_Earth.txt  cfg_HD189.txt  cfg_HD209.txt  cfg_Jupiter.txt  vulcan_cfg_Earth.py  vulcan_cfg_GJ436b.py  vulcan_cfg_HD189.py  vulcan_cfg_HD209.py  vulcan_cfg_Jupiter.py  vulcan_cfg_iso.py
fastchem_vulcan/: fastchem  makefile  version.txt
nk/: Al2O3.txt  C.txt  CH4.txt  CaTiO3.txt  Cr.txt  Fe.txt  Fe2O3.txt  Fe2SiO4.txt  FeO.txt  FeS.txt  H2O.txt  KCl.txt  Mg2SiO4.txt  Mg2SiO4_amorph.txt  MgFeSiO3.txt  MgFeSiO4.txt  MgO.txt  MgSiO3.txt  MgSiO3_amorph.txt  MnS.txt  Na2S.txt  NaCl.txt  S8.txt  SiC.txt  SiO.txt  SiO2.txt  SiO2_amorph.txt  Soot_Lavvas.txt  Tholin.txt  Tholin_CG22_0.625.txt  Tholin_CG22_1.0.txt  Tholin_CG22_inf.txt  Tholin_He22.txt  Tholin_He23_300.txt  Tholin_He23_400.txt  TiC.txt  TiO2.txt  TiO2_anatase.txt  VO.txt  Vacuum.txt  (+3 more)
other_cfgs/: vulcan_cfg_Earth.py
output/: README.md  cfg_GJ1214b_cf.txt  cfg_GJ1214b_cld.txt  cfg_HD189.txt
plot/: README.md
plot_py/: Earth-TP.eps  Earth-concentration.eps  README.md  plot_Earth.py  plot_Jupiter_Tsai2021.py  plot_TP_Kzz.py  plot_actinic_flux.py  plot_evolution.py  plot_helios_spectra.py  plot_many_vulcan.py  plot_photo_rates_w_Moses_Venot.py  plot_spectra.py  plot_stellar_flux.py  plot_tau1_species.py  plot_vulcan.py  plot_vulcan_w_Moses_Venot.py  stellar_flux_resample.py
thermo/: CHO_network.txt  CHO_photo_network.txt  CHO_photo_network_lowT.txt  CHO_thermo_network.txt  Ganz-CH4-NCHO_photo_network.txt  HOC_compose.txt  NCHO_earth_photo_network.txt  NCHO_full_photo_network.txt  NCHO_ion_network.txt  NCHO_photo_network.txt  NCHO_photo_network_lowT.txt  NCHO_photo_network_lowT_Jupiter.txt  NCHO_photo_oxidising_network.txt  NCHO_thermo_network.txt  NaNCHO_photo_network_v926.txt  PHO_full_photo_network.txt  README.md  SNCHO_DMS_photo_network_Tsai2024.txt  SNCHO_earth_photo_network.txt  SNCHO_full_photo_network.txt  SNCHO_photo_network.txt  SNCHO_photo_network_2023.txt  SNCHO_photo_network_2024.txt  SNCHO_photo_network_2025.txt  SNCHO_photo_network_C3.txt  SNCHO_photo_network_v926.txt  SO3-H2SO4_mechanism.txt  TiNHOC_compose.txt  TiSNCHO_photo_network.txt  TiVNCHO_photo_network_v1025.txt  all_compose.txt  gibbs_text.txt  make_compose.py  (+2 more)
(+700 files in other folders)
