[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "vulcan-chem"
version = "25.04.13"
description = "Chemical kinetics for exoplanetary atmospheres"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Shang-Min Tsai", email = "shangmin.tsai@ucr.edu"},
	{name = "Harrison Nicholls", email = "harrison.nicholls@physics.ox.ac.uk"},
]
keywords = [
    "Astronomy",
    "Exoplanets",
    "Chemistry",
    "Chemical kinetics",
    "Atmospheres"
]
license = {text = "GPL v3.0"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "sympy",
]

[project.urls]
homepage = "https://github.com/nichollsh/VULCAN"
issues = "https://github.com/nichollsh/VULCAN/issues"
documentation = "https://github.com/nichollsh/VULCAN"
changelog = "https://github.com/nichollsh/VULCAN/releases"

[project.optional-dependencies]
develop = [
    "coverage[toml]",
    "pillow",
    "pip-tools",
    "pytest >= 8.1",
    "pre-commit",
    "ruff",
]

docs = [
    "markdown-include",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.setuptools]
package-dir = {"vulcan" = "src/vulcan" }
include-package-data = true

[tool.coverage.run]
branch = true
source = ["vulcan"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 96
target-version = "py312"
extend-exclude = ["*ipynb"]

[tool.ruff.lint]
select = [
	"F",  # Pyflakes
	"E",  # pycodestyle (error)
	"W",  # pycodestyle (warning)
    "I",    # isort
]
ignore = [
    "E501", # Line too long
]

[tool.ruff.lint.isort]
known-first-party=["vulcan"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
